// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile component should render correctly 1`] = `""`;

exports[`Test Profile container renders the container 1`] = `
<Connect(Profile)
  match={
    Object {
      "params": Object {
        "username": "testUser",
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Profile
    dispatch={[Function]}
    history={Object {}}
    isLoggedIn={true}
    match={
      Object {
        "params": Object {
          "username": "testUser",
        },
      }
    }
    profile={
      Object {
        "isLoggedIn": true,
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
  >
    <ViewProfile
      bio=""
      image=""
      username=""
    >
      <div
        className="w-100"
      >
        <div
          className="container mt-5 mb-5 container"
        >
          <h1
            className="viewProfiletitle"
          >
             My Profile
          </h1>
          <div
            className="profile-box"
          >
            <div
              className="img-username"
            >
              <img
                alt="user profile pic"
                className="img-fluid"
                src="http://www.macmillanenglish.com/img/author-image.png"
              />
              <div
                className="username"
              >
                 
                Username
              </div>
            </div>
            <div
              className="profile-details"
            >
              <div
                className="bio"
              >
                 
                This is my biography
              </div>
              <a
                className="btn btn-outline-primary button"
                href="/profiles/edit"
              >
                Edit Profile
              </a>
            </div>
          </div>
        </div>
      </div>
    </ViewProfile>
  </Profile>
</Connect(Profile)>
`;

exports[`Test Profile container renders the container 2`] = `
<Connect(EditProfilePage)
  match={
    Object {
      "params": Object {
        "username": "testUser",
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <EditProfilePage
    editProfileDispatch={[Function]}
    getUserInputs={[Function]}
    match={
      Object {
        "params": Object {
          "username": "testUser",
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    userProfile={
      Object {
        "isLoggedIn": true,
      }
    }
  >
    <EditProfile
      onChange={[Function]}
      onClick={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="container"
      >
        <h1
          className="title"
        >
          Edit Profile
        </h1>
        <hr />
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="text-center"
            >
              <img
                alt="avatar"
                className="img-fluid"
                src="http://www.macmillanenglish.com/img/author-image.png"
              />
              <h6>
                Upload a different photo...
              </h6>
              <div
                className="col-lg-8 mt-2"
              >
                <button
                  className="btn button"
                  onClick={[Function]}
                  type="submit"
                >
                  Upload
                </button>
              </div>
            </div>
          </div>
          <div
            className="col-md-9 personal-info"
          >
            <h3
              className="pl-3"
            >
              Personal info
            </h3>
            <form
              className="form-horizontal"
              onSubmit={[Function]}
            >
              <FormInput
                el={
                  Object {
                    "elementId": "first_name",
                    "inputType": "text",
                    "placeholder": "First Name",
                  }
                }
                key="first_name"
                onChange={[Function]}
                onClick={[Function]}
              >
                <div
                  className="form-group"
                >
                  <input
                    className="form-control"
                    id="first_name"
                    name="first_name"
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="First Name"
                    type="text"
                  />
                </div>
              </FormInput>
              <FormInput
                el={
                  Object {
                    "elementId": "last_name",
                    "inputType": "text",
                    "placeholder": "Last Name",
                  }
                }
                key="last_name"
                onChange={[Function]}
                onClick={[Function]}
              >
                <div
                  className="form-group"
                >
                  <input
                    className="form-control"
                    id="last_name"
                    name="last_name"
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="Last Name"
                    type="text"
                  />
                </div>
              </FormInput>
              <textarea
                className="form-control"
                id="exampleFormControlTextarea1"
                name="bio"
                onChange={[Function]}
                placeholder="Tell us something about yourself."
                rows="3"
              />
              <div
                className="col-lg-8"
              >
                <button
                  className="btn  btn-outline-primary mt-4 button"
                  type="submit"
                >
                  Save Changes
                </button>
                <span
                  className="mr-2"
                />
                <button
                  className="btn btn-outline-danger mt-4"
                  type="submit"
                >
                  Cancel
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </EditProfile>
  </EditProfilePage>
</Connect(EditProfilePage)>
`;

exports[`profile container should render correctly 1`] = `
<Provider
  store={
    Object {
      "default": [MockFunction],
      "dispatch": [MockFunction],
      "getState": [Function],
      "subscribe": [MockFunction],
    }
  }
>
  <EditProfilePage
    editProfileDispatch={[Function]}
    getUserInputs={[Function]}
    userProfile={Object {}}
  >
    <EditProfile
      onChange={[Function]}
      onClick={[Function]}
      onSubmit={[Function]}
    >
      <div
        className="container"
      >
        <h1
          className="title"
        >
          Edit Profile
        </h1>
        <hr />
        <div
          className="row"
        >
          <div
            className="col-md-3"
          >
            <div
              className="text-center"
            >
              <img
                alt="avatar"
                className="img-fluid"
                src="http://www.macmillanenglish.com/img/author-image.png"
              />
              <h6>
                Upload a different photo...
              </h6>
              <div
                className="col-lg-8 mt-2"
              >
                <button
                  className="btn button"
                  onClick={[Function]}
                  type="submit"
                >
                  Upload
                </button>
              </div>
            </div>
          </div>
          <div
            className="col-md-9 personal-info"
          >
            <h3
              className="pl-3"
            >
              Personal info
            </h3>
            <form
              className="form-horizontal"
              onSubmit={[Function]}
            >
              <FormInput
                el={
                  Object {
                    "elementId": "first_name",
                    "inputType": "text",
                    "placeholder": "First Name",
                  }
                }
                key="first_name"
                onChange={[Function]}
                onClick={[Function]}
              >
                <div
                  className="form-group"
                >
                  <input
                    className="form-control"
                    id="first_name"
                    name="first_name"
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="First Name"
                    type="text"
                  />
                </div>
              </FormInput>
              <FormInput
                el={
                  Object {
                    "elementId": "last_name",
                    "inputType": "text",
                    "placeholder": "Last Name",
                  }
                }
                key="last_name"
                onChange={[Function]}
                onClick={[Function]}
              >
                <div
                  className="form-group"
                >
                  <input
                    className="form-control"
                    id="last_name"
                    name="last_name"
                    onChange={[Function]}
                    onClick={[Function]}
                    placeholder="Last Name"
                    type="text"
                  />
                </div>
              </FormInput>
              <textarea
                className="form-control"
                id="exampleFormControlTextarea1"
                name="bio"
                onChange={[Function]}
                placeholder="Tell us something about yourself."
                rows="3"
              />
              <div
                className="col-lg-8"
              >
                <button
                  className="btn  btn-outline-primary mt-4 button"
                  type="submit"
                >
                  Save Changes
                </button>
                <span
                  className="mr-2"
                />
                <button
                  className="btn btn-outline-danger mt-4"
                  type="submit"
                >
                  Cancel
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </EditProfile>
  </EditProfilePage>
</Provider>
`;
